--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
     <div class="container-fluid h100">
 
         <div class="pb-5 pt-5 is-flex justify-center">
-            <h1 class="title has-text-white mr-2">Station Météo</h1>
-            <i class="fas fa-cloud-sun fa-3x has-text-white"></i>
+            <h1 class="title has-text-black mr-2">Station Météo</h1>
+            <i class="fas fa-cloud-sun fa-3x has-text-black"></i>
         </div>
 
         <div class="columns">
@@ -32,6 +32,7 @@
                         <div class="content">
                             <div>
                                 <i id="signal" class="far fa-circle"></i>
+                                <span> </span>
                             </div>
                             <div>
                                 <i class="fas fa-hdd"></i>
@@ -82,6 +83,7 @@
                         <div class="content">
                             <div>
                                 <i id="signal2" class="far fa-circle"></i>
+                                <span> </span>
                             </div>
                             <div>
                                 <i class="fas fa-hdd"></i>
@@ -125,13 +127,14 @@
                         <div class="media">
                             <div class="media-content has-text-centered">
                                 <p class="title is-4"><i class="fas fa-edit" onclick="editName(this)"></i><span id="nomSensor3"></span></p>
-                                <p id="editApi1" class="subtitle is-6"><span id="villeApi">Bordeaux</span></p>
+                                 <p id="editApi1" class="subtitle is-6"><span id="villeApi">Bordeaux</span></p>
                              </div>
                         </div>
 
                         <div class="content">
                             <div>
                                 <i id="signal3" class="far fa-circle"></i>
+                                <span> </span>
                             </div>
                             <br>
                             <div>
